--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html style="zoom: 150%;">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
